[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/update_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/Quest_Tile.gd" type="Script" id=3]

[node name="Quest_Tile" type="NinePatchRect"]
margin_right = 224.0
margin_bottom = 143.0
rect_min_size = Vector2( 150, 50 )
script = ExtResource( 3 )

[node name="Unlocked_Panel" type="Control" parent="."]
visible = false
margin_right = 119.0
margin_bottom = 52.0

[node name="Sprite" type="Sprite" parent="Unlocked_Panel"]
position = Vector2( 11, 11 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="Title" type="Label" parent="Unlocked_Panel"]
margin_left = 1.0
margin_top = 19.0
margin_right = 97.0
margin_bottom = 35.0
theme = ExtResource( 2 )
text = "Lorem ipsum"

[node name="Description" type="Label" parent="Unlocked_Panel"]
margin_left = 19.0
margin_top = 4.0
margin_right = 115.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Lorem ipsum"

[node name="Locked_Panel" type="Control" parent="."]
margin_left = 2.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 71.0

[node name="Panel" type="Panel" parent="Locked_Panel"]
margin_left = -2.0
margin_top = -4.0
margin_right = 222.0
margin_bottom = 61.0

[node name="Container" type="VBoxContainer" parent="Locked_Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Title" type="Label" parent="Locked_Panel/Container"]
margin_right = 104.0
margin_bottom = 16.0
theme = ExtResource( 2 )
text = "Quest"

[node name="Description" type="Label" parent="Locked_Panel/Container"]
margin_top = 20.0
margin_right = 104.0
margin_bottom = 36.0
theme = ExtResource( 2 )
text = "Description"

[node name="Reward" type="Label" parent="Locked_Panel/Container"]
margin_top = 40.0
margin_right = 104.0
margin_bottom = 56.0
theme = ExtResource( 2 )
text = "Rward: 100xp"
